--- a/.tekton/tasks.yml
+++ b/.tekton/tasks.yml
@@ -57,3 +57,25 @@ spec:
 
         echo "Running unit tests..."
         nosetests $(params.args)
+---
+apiVersion: tekton.dev/v1beta1
+kind: Task
+metadata:
+  name: install-deps
+spec:
+  workspaces:
+    - name: source
+  steps:
+    - name: install
+      image: python:3.9-slim
+      workingDir: $(workspaces.source.path)
+      script: |
+        #!/bin/bash
+        set -e
+
+        echo "Fixing Python packaging..."
+        python -m pip install --upgrade pip
+        pip install --upgrade setuptools wheel
+
+        echo "Installing dependencies once globally..."
+        pip install --no-cache-dir -r requirements.txt
