--- a/.tekton/tasks.yml
+++ b/.tekton/tasks.yml
@@ -21,12 +21,19 @@ spec:
         #!/usr/bin/env sh
         set -eu
         echo "Removing all files from ${WORKSPACE_SOURCE_PATH} ..."
+
+        # Delete any existing contents of the directory if it exists.
+        # We don't just "rm -rf ${WORKSPACE_SOURCE_PATH}" because it might be "/"
         if [ -d "${WORKSPACE_SOURCE_PATH}" ] ; then
+          # Delete non-hidden files
           rm -rf "${WORKSPACE_SOURCE_PATH:?}"/*
+
+          # Delete hidden files .something
           rm -rf "${WORKSPACE_SOURCE_PATH}"/.[!.]*
+
+          # Delete ..something
           rm -rf "${WORKSPACE_SOURCE_PATH}"/..?*
         fi
-
 ---
 apiVersion: tekton.dev/v1beta1
 kind: Task
@@ -45,42 +52,10 @@ spec:
       image: python:3.9-slim
       workingDir: $(workspaces.source.path)
       script: |
-        #!/usr/bin/env bash
-        set -eux
+        #!/bin/bash
+        set -e
 
-        echo "Repairing Python environment..."
-        python -m ensurepip --upgrade
+        python -m pip install --upgrade pip wheel
+        pip install -r requirements.txt
 
-        echo "Upgrading packaging tools (THIS FIXES THE LAB BUG)"
-        python -m pip install --upgrade pip
-        python -m pip install --upgrade setuptools wheel
-
-        echo "Installing project dependencies..."
-        python -m pip install --no-cache-dir -r requirements.txt
-
-        echo "Running unit tests..."
-        python -m nose $(params.args)
-
----
-apiVersion: tekton.dev/v1beta1
-kind: Task
-metadata:
-  name: install-deps
-spec:
-  workspaces:
-    - name: source
-  steps:
-    - name: install
-      image: python:3.9-slim
-      workingDir: $(workspaces.source.path)
-      script: |
-        #!/usr/bin/env bash
-        set -eux
-
-        echo "Preparing Python packaging..."
-        python -m ensurepip --upgrade
-        python -m pip install --upgrade pip
-        python -m pip install --upgrade setuptools wheel
-
-        echo "Installing dependencies..."
-        python -m pip install --no-cache-dir -r requirements.txt
+        nosetests $(params.args)
